--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "homepage": "http://theflyer1983.github.io/react-router-demo",
   "dependencies": {
-    "ajv": "^6.9.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5"
+    "ajv": "^6.12.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,6 +19,12 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+    "gh-pages": "^3.1.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
